fix: make circuit cutter menu Java 8 compatible